# Local-RAG-Pipeline

./: .gitignore  DESIGN_CHOICES.md  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
src/: rag_pipeline.py
src/rag_project/: config.py  data_processing.py  main.py  vector_db.py
src/rag_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_data_processing.py
