# pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_project"
version = "0.1.0"
authors = [
    {name = "Gemini", email = "gemini@google.com"},
]
description = "A local RAG pipeline for Q&A with your documents."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/google/gemini"

[tool.setuptools.packages.find]
where = ["src"]
